--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
+    "typescript": "^4.1.5",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/styled-components": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
