--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@types/styled-components": "^5.1.7",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
